# ReversiGame

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  ProjectStructure.txt  README.md  data.txt  errors.txt  errors1.txt  errors2.txt  gdbmode.bat  report.bat  reversi.bat  run.bat
src/: ai_re.c  main.c  test.c
src/Utils/: map.c  map.txt  move.c  moveSet.c  set.c  tools.c
src/include/: Constants.h  GameLoop.h  MinMax.h  map.h  move.h  moveSet.h  reversi.h  set.h  solver.h  tools.h
src/src/: GameLoop.c  MinMax.c  rev.txt  reversi.c  solver.c
